@@ -1,22 +1,19 @@
 package br.com.alura.escola.dao;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
-import java.net.URL;
-import java.net.URLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 public class TesteHttpDAO {
 
-	public void testarConexaoHttp() throws IOException {
-		URL url = new URL("http://www.google.com.br");
-		URLConnection urlConnection = url.openConnection();
-		BufferedReader reader = new BufferedReader(new InputStreamReader(urlConnection.getInputStream()));
-		String line;
-		while ((line = reader.readLine()) != null) {
-			System.out.println(line);
-		}
-		reader.close();
+	public void testarConexaoHttp() throws IOException, InterruptedException, URISyntaxException {
+		URI uri = new URI("https://www.google.com.br");
+		HttpClient client = HttpClient.newHttpClient();
+		HttpRequest req = HttpRequest.newBuilder(uri).GET().build();
+		HttpResponse<String> resp = client.send(req, HttpResponse.BodyHandlers.ofString());
+		System.out.println(resp.body());
 	}
-
 }
